5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1708_3064.log
== TEST (2019-04-29 15:10:28) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x != "AAMEUL") or (x != "HETHRADIAH") or (x != "RAKSHASA") or (d1<1) or (d1>10) or (d2<1) or (d2>10):
	print("Entrada invalida")
elif (x=="AAMEUL"):
	g= 
-- ERROR:
File "XXXX", line 8
    g= 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:25) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x != "AAMEUL") or (x != "HETHRADIAH") or (x != "RAKSHASA") or (d1<1) or (d1>10) or (d2<1) or (d2>10):
	print("Entrada invalida")
elif (x=="AAMEUL"):
	g= (d1+d2)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:13:10) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x = "AAMEUL") or (x = "HETHRADIAH") or (x = "RAKSHASA") or (d1=>1) or (d1<=10) or (d2=>1) or (d2<=10):
	elif (x=="AAMEUL"):
		g= (d1+d2)
-- ERROR:
File "XXXX", line 5
    if (x = "AAMEUL") or (x = "HETHRADIAH") or (x = "RAKSHASA") or (d1=>1) or (d1<=10) or (d2=>1) or (d2<=10):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:13:24) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == "HETHRADIAH") or (x == "RAKSHASA") or (d1=>1) or (d1<=10) or (d2=>1) or (d2<=10):
	elif (x=="AAMEUL"):
		g= (d1+d2)
-- ERROR:
File "XXXX", line 5
    if (x == "AAMEUL") or (x == "HETHRADIAH") or (x == "RAKSHASA") or (d1=>1) or (d1<=10) or (d2=>1) or (d2<=10):
                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:38) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x != "AAMEUL") or (x != "HETHRADIAH") or (x != "RAKSHASA") or (d1<1) or (d1>10) or (d2<1) or (d2>10):
	print("Entrada invalida")
elif (x=="AAMEUL"):
	g=
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
-- ERROR:
File "XXXX", line 8
    g=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:49) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x != "AAMEUL") or (x != "HETHRADIAH") or (x != "RAKSHASA") or (d1<1) or (d1>10) or (d2<1) or (d2>10):
	print("Entrada invalida")
elif (x=="AAMEUL"):
	g= (d1+d2)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:22) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x != "AAMEUL") or (x != "HETHRADIAH") or (x != "RAKSHASA") or (d1<0) or (d1>10) or (d2<0) or (d2>10):
	print("Entrada invalida")
elif (x=="AAMEUL"):
	g= (d1+d2)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:49) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x != "AAMEUL") or (x != HETHRADIAH) or (x != "RAKSHASA") or (d1<0) or (d1>10) or (d2<0) or (d2>10):
	print("Entrada invalida")
elif (x=="AAMEUL"):
	g= (d1+d2)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x != "AAMEUL") or (x != HETHRADIAH) or (x != "RAKSHASA") or (d1<0) or (d1>10) or (d2<0) or (d2>10):
NameError: name 'HETHRADIAH' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:06) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == HETHRADIAH) or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	elif (x=="AAMEUL"):
		g= (d1+d2)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
-- ERROR:
File "XXXX", line 6
    elif (x=="AAMEUL"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:24) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == HETHRADIAH) or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	elif(x=="AAMEUL"):
		g= (d1+d2)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
-- ERROR:
File "XXXX", line 6
    elif(x=="AAMEUL"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:28) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == HETHRADIAH) or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		g= (d1+d2)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
-- ERROR:
File "XXXX", line 6
    elif(x=="AAMEUL"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:37) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == HETHRADIAH) or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		g= (d1+d2)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
-- ERROR:
File "XXXX", line 6
    elif(x=="AAMEUL"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:20:01) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == HETHRADIAH) or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		g= (d1+d2)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
-- ERROR:
File "XXXX", line 6
    elif(x=="AAMEUL"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:20:24) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == "HETHRADIAH") or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		g= (d1+d2)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
-- ERROR:
File "XXXX", line 6
    elif(x=="AAMEUL"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:22:03) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == "HETHRADIAH") or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		g= (d1+d2)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
-- ERROR:
File "XXXX", line 6
    elif(x=="AAMEUL"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:22:33) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == "HETHRADIAH") or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		g= (d1+d2)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
-- ERROR:
File "XXXX", line 6
    elif(x=="AAMEUL"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:22:55) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == "HETHRADIAH") or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:23:20) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == "HETHRADIAH") or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:12) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == "HETHRADIAH") or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
	print("Entrada invalida")
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:25:24) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == "HETHRADIAH") or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
	print("Entrada invalida")
	
	
	
	
-- EXECUTION TIME:
0.204663
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
12
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:41) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x == "AAMEUL") or (x == "HETHRADIAH") or (x == "RAKSHASA") or (d1>1) or (d1<10) or (d2>1) or (d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
	print("Entrada invalida")
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:18) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if (x != "AAMEUL") or (x != "HETHRADIAH") or (x != "RAKSHASA") or (d1<1) or (d1>10) or (d2<1) or (d2>10):
	print("Entrada invalida")
elif(x=="AAMEUL"):
	dano= (d1+d2)+8
	print(dano)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
	print(dano)
elif (x=="RAKSHASA"):
	dano= (d1+d1)+10
	print(dano)

	
	
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:10) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL"):
	dano= (d1+d2)+8
	print(dano)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
	print(dano)
elif (x=="RAKSHASA"):
	dano= (d1+d1)+10
	print(dano)
else:
	print("Entrada invalida")
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:28:19) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL"):
	dano= (d1+d2)+8
	print(dano)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
	print(dano)
elif (x=="RAKSHASA"):
	dano= (d1+d1)+10
	print(dano)
else:
	print("Entrada invalida")
	
	
	
	
-- EXECUTION TIME:
0.169715
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
12
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:24) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL"):
	dano= (d1+d2)+8
	print(dano)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
	print(dano)
elif (x=="RAKSHASA"):
	dano= (d1+d1)+10
	print(dano)
else:
	print("Entrada invalida")
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:38) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL"):
	dano= (d1+d2)+8
	print(dano)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
	print(dano)
elif (x=="RAKSHASA"):
	dano= (d1+d1)+10
	print(dano)
else:
	print("Entrada invalida")
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:00) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL"):
	dano= (d1+d2)+8
	print(dano)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
	print(dano)
elif (x=="RAKSHASA"):
	dano= (d1+d1)+10
	print(dano)
elif (x!="RAKSHASA") or (x!="HETHRADIAH") or ( x!="AAMEUL") or (d1<1) or (d1>10) or (d2<1) or (d2>10):
	print("Entrada invalida")
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:05) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x!="AAMEUL") or (x!="HETHRADIAH")or(x!="RAKSHASA")or(d1<1)or(d1>10)or(d2<1)or(d2>10):
	print("Entrada invalida")
elif(x=="AAMEUL"):
	dano= (d1+d2)+8
	print(dano)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
	print(dano)
elif (x=="RAKSHASA"):
	dano= (d1+d1)+10
	print(dano)
elif (x!="RAKSHASA") or (x!="HETHRADIAH") or ( x!="AAMEUL") or (d1<1) or (d1>10) or (d2<1) or (d2>10):
	print("Entrada invalida")
	
	
	
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:26) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x!="AAMEUL") or (x!="HETHRADIAH")or(x!="RAKSHASA")or(d1<1)or(d1>10)or(d2<1)or(d2>10):
	print("Entrada invalida")
elif(x=="AAMEUL"):
	dano= (d1+d2)+8
	print(dano)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
	print(dano)
elif (x=="RAKSHASA"):
	dano= (d1+d1)+10
	print(dano)

	
	
	
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:51) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x!="AAMEUL")or(x!="HETHRADIAH")or(x!=RAKSHASA)or(d1<1)or(d1>10)or(d2<1)or(d2>10):
	print("Entrada invalida")
elif(x=="AAMEUL"):
	dano= (d1+d2)+8
	print(dano)
elif (x=="HETHRADIAH"):
	dano= 2*(d1+d2)
	print(dano)
elif (x=="RAKSHASA"):
	dano= (d1+d1)+10
	print(dano)

	
	
	
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:17) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x==RAKSHASA)or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	elif(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
	print("Entrada invalida")

	
	
	
	
	
-- ERROR:
File "XXXX", line 6
    elif(x=="AAMEUL"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:25) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x==RAKSHASA)or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
	print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:38) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x==RAKSHASA)or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
	print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:50) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x==RAKSHASA)or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
	print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:07) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
	print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:43:16) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
	print("Entrada invalida")

	
	
	
	
	
-- EXECUTION TIME:
0.183358
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
12
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:23) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
	print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:39) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
	else:
	print("Entrada invalida")

	
	
	
	
	
-- ERROR:
File "XXXX", line 16
    print("Entrada invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:42) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
	else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:45:31) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")and(x=="HETHRADIAH")and(x=="RAKSHASA")and(d1>1)and(d1<10)and(d2>1)and(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
	else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:08) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")and(x=="HETHRADIAH")and(x=="RAKSHASA")and(d1>1)and(d1<10)and(d2>1)and(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
	else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:43) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
	else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:47:53) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:49:22) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or(d1>1)or(d1<10)or(d2>1)or(d2<10):
	if(x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:51:25) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")and(x=="HETHRADIAH")and(x=="RAKSHASA")and(d1>1)and(d1<10)and(d2>1)and(d2<10):
	if (x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:52:49) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")and(d1>1)and(d1<10)and(d2>1)and(d2<10):
	if (x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
		print("Entrada invalida")

	
	
	
	
	
-- EXECUTION TIME:
0.146491
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:54:51) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or((d1>1)and(d1<10))or((d2>1)and(d2<10)):
	if (x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:55:00) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or((d1>1)and(d1<10))or((d2>1)and(d2<10)):
	if (x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
		print("Entrada invalida")

	
	
	
	
	
-- EXECUTION TIME:
0.203059
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
12
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 14:56:24) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or((d1>1)and(d1<10))or((d2>1)and(d2<10)):
	if (x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 14:56:55) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or((d1>1)and(d1<10))or((d2>1)and(d2<10)):
	if (x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 14:57:30) 
-- CODE:
x= input("Nome da cabeca: (AAMEUL/HETHRADIAH/RAKSHASA)?")
d1= int(input("Valor do dado:"))
d2= int(input("Valor do dado:"))

if(x=="AAMEUL")or(x=="HETHRADIAH")or(x=="RAKSHASA")or((d1>1)and(d1<10))or((d2>1)and(d2<10)):
	if (x=="AAMEUL"):
		dano= (d1+d2)+8
		print(dano)
	elif (x=="HETHRADIAH"):
		dano= 2*(d1+d2)
		print(dano)
	elif (x=="RAKSHASA"):
		dano= (d1+d1)+10
		print(dano)
else:
		print("Entrada invalida")

	
	
	
	
	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
